--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,8 @@ services:
     image: eclipse-mosquitto:1.6.15
     ports:
       - "1883:1883"
+      - "8883:8883"
+    volumes:
+      - mosquitto-config:/mosquitto/config
     restart: always
+
